kubernetes/apps/default/tautulli/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tautulli
  namespace: default
spec:
  ports:
    - name: http
      port: 8181
      targetPort: 8181
      protocol: TCP
  selector:
    app.kubernetes.io/name: tautulli
    app.kubernetes.io/instance: tautulli
    app.kubernetes.io/controller: tautulli
